# VK_cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  index.html  main.c
.github/workflows/: CI.yml  github-action-demo.yml
bool_expr_lib/include/: bool_expr_lib.h
bool_expr_lib/parallel/: CMakeLists.txt
bool_expr_lib/parallel/include/: bool_expr_parallel_lib.h
bool_expr_lib/parallel/src/: bool_expr_parallel.c
bool_expr_lib/parallel/tests/: CMakeLists.txt  parallel_lib_test.cpp
bool_expr_lib/parallel/tests/valgrind_tests/: CMakeLists.txt  size_1.cpp  size_10.cpp
bool_expr_lib/successive/: CMakeLists.txt
bool_expr_lib/successive/src/: bool_expr_successive.c
bool_expr_lib/successive/tests/: CMakeLists.txt  successive_lib_tests.cpp
linters/: linter.sh  run.sh  sanitizer.sh  sanitizer_address.sh  sanitizer_thread.sh  valgrind.sh
polish_notation_lib/int_comparison/: CMakeLists.txt
polish_notation_lib/int_comparison/include/: polish_int_comp_lib.h
polish_notation_lib/int_comparison/src/: int_comparison.c
polish_notation_lib/int_comparison/tests/: CMakeLists.txt  int_comp_tests.cpp
stress/: CMakeLists.txt  stress.cpp
stress/direct/: CMakeLists.txt
stress/direct/parallel/: CMakeLists.txt
stress/direct/parallel/include/: test_parallel.h
stress/direct/parallel/src/: test_parallel.c
stress/direct/src/: test_parallel.c  test_successive.c
stress/direct/successive/: CMakeLists.txt
stress/direct/successive/include/: test_successive.h
stress/direct/successive/src/: test_successive.c
tests/: CMakeLists.txt  test_toys_search.cpp
toys_catalogue_lib/: CMakeLists.txt  toys_catalogue.c  toys_catalogue.h
